Landing page and navbar
Menu de navegacion, landing page , logo , primera seccion finalizada

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,131 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-    --cl-primary: orange; 
+    --cl-primary: #fff;
+    --cl-primary-shadow: rgb(238, 238, 238);
+    --cl-secondary: rgba(24, 24, 24, 0.8);
+    --cl-tertiary: rgb(255, 115, 0);
+    --cl-background: rgb(238, 238, 238);
+    --ft-logo-font: 'Yanone Kaffeesatz', sans-serif;
+    --ft-main: 'Roboto', sans-serif;
 }
 
+body {
+    margin: 0;
+    font-family: var(--ft-main);
+}
 .main {
-    background-color: var(--cl-primary);
+    background-color: var(--cl-background);
+    width: 100%;
+    height: auto;
+}
+.navContainer {
+    margin: auto;
+    width: 90%;
+}
+.navbars {
+    width: 100%;
+    height: 70px;
+    background-color: var(--cl-secondary);
+    position: fixed;
+}
+
+span.logo {
+    color: var(--cl-primary);
+    font-family: var(--ft-logo-font);
+    font-size: 3em;
+    cursor: pointer;
+}
+
+.bigS {
+    text-align: center;
+    transform: skew(20deg);
+    letter-spacing: 5px;
+    padding: 5px 20px 0px 20px;
+    background-color: var(--cl-tertiary);
+
+}
+
+.navbarContent {
+    margin-top: 5px;
+}
+
+ul {
+    float: right;
+    margin-top: 20px;
+    padding-left: 0;
+}
+
+ul a {
+    text-decoration: none;
+    color: var(--cl-primary);
+    font-size: 1em;
+    font-weight: 300;
+    padding: 1.2em 0.1em;
+}
+
+ul li {
+    display: inline-block;
+    padding: 5px 8px;
+    text-align: center;
+    color: var(--cl-primary);
+}
+
+ul li a.active {
+    font-weight: 900;
+}
+
+ul a:hover {
+    color: var(--cl-primary-shadow);
+    border-bottom: 4px solid var(--cl-tertiary);
+    padding-bottom: 1em;
+}
+
+.firstSection {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("foto2@2x.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: 120em 100%;
+    width: 100%;
+    height: 100vh;
+}
+
+.logoSal {
+    width: 20em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.firstContent {
+    padding-top: 16em;
+    text-align: center;
+}
+
+h1.primaryText {
+    color: var(--cl-primary);
+    margin-top: 1.4em;
+    font-family: var(--ft-logo-font);
+    font-size: 5em;
+    text-shadow: 2px 2px black;
+}
+
+.secondSection {
+    background-color: red;
+    width: 100%;
+    height: 100vh;
+}
+.thirdSection {
+    background-color: blue;
+    width: 100%;
+    height: 100vh;
+}
+
+.fourthSection { 
+    background-color: black;
     width: 100%;
     height: 100vh;
 }
