--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ html {
 body {
     margin: 0;
     font-family: var(--ft-main);
+    position: relative;
 }
 .main {
     background-color: var(--cl-secondary);
@@ -65,7 +66,7 @@ span.logo {
 
 ul {
     float: right;
-    margin-top: 20px;
+    padding-top: 0.8em;
     padding-left: 0;
 }
 
@@ -75,24 +76,39 @@ ul a {
     font-size: 1em;
     font-weight: 300;
     padding: 1.2em 0.1em;
+    background-color: none;
 }
 
 ul li {
     display: inline-block;
-    padding: 5px 8px;
     text-align: center;
     color: var(--cl-primary);
+    padding-right: 5px;
 }
 
 ul li a.active {
     font-weight: 900;
 }
 
-ul a:hover {
+.list-group-item {
+    color: var(--cl-primary);
+    background-color: transparent;
+}
+.list-group-item.active {
+    background-color: transparent;
+    border: none;
+    border-bottom: 4px solid var(--cl-tertiary);
+    padding-bottom: 1em;
+}
+
+.list-group-item:hover {
+    background-color: transparent;
     color: var(--cl-primary-shadow);
     border-bottom: 4px solid var(--cl-tertiary);
     padding-bottom: 1em;
 }
+
+
 
 .firstSection {
 /*     background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("foto2@2x.png");
@@ -125,7 +141,7 @@ h1.primaryText {
     margin-top: 1.4em;
     font-family: var(--ft-logo-font);
     font-size: 5em;
-    text-shadow: 2px 2px black;
+    text-shadow: 2px 2px var(--cl-secondary);
 }
 
 .descuento {
