--- a/css/nosotros_style.css
+++ b/css/nosotros_style.css
@@ -1,13 +1,30 @@
-@charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
-
-
-:root {
-    --cl-primary: orange; 
+body {
+    font-size: 1.2 rem;
 }
 
-.main {
-    background-color: var(--cl-primary);
-    width: 100%;
-    height: 100vh;
+.btn-group {
+    font-size: 26px;
+}
+
+#equipo {
+    background-color: rgba(231, 143, 43, 0.911);
+}
+
+.p {
+    font-size: 20px;
+}
+
+.img-thumbnail {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border-color: #646464;
+    border-width: 7px;
+    border-style: solid;
+}
+
+.big-quote {}
+
+#footer {
+    background-color: rgb(71, 90, 109);
 }
