--- a/css/contacto.css
+++ b/css/contacto.css
@@ -17,28 +17,46 @@ body{
 }
 
 .form-control {
-  background-color: rgba(128, 128, 128, 0.267);
+  background-color: var(--cl-primary-shadow);
   width: 100%;
 }
 
-.container {
-  width: 70%;
-  height: 100%;
-  padding-top: 90px;
-  padding-bottom: 50px;
+.container-contacto {
+  width: 90%;
+  padding-left: 0;
   margin: auto;
   background-color: var(--cl-primary);
   font-size: large;
+
 }
 
-.titulo-contacto h1{
-  font-size: 50px;
-  color: var(--cl-secondary);
-  padding-top: 10px;
+.margin-contacto {
+  width: 90%;
+  margin: auto;
+}
+
+.margin-contacto p {
+  color: var(--cl-primary);
+  font-size: 0.9em;
+  width: 55em;
+}
+
+.header-contacto{
+  background-color: var(--cl-tertiary);
+  height: 17em;
+  margin-bottom: 4em;
+}
+
+.header-contacto h1{
+  font-size: 4em;
+  color: var(--cl-primary);
+  padding-top: 1.5em;
 }
 
 .form-check label{
   color: var(--cl-secondary);
+  font-size: 0.8em;
+  font-style: oblique;
 }
 
 #div-uno {
@@ -50,10 +68,10 @@ body{
 }
 
 #enviar {
-  margin-left: 40%;
-  margin-right: 40%;
-  padding-left: 30px;
-  padding-right: 30px;
+  float: right;
+  width: 100%;
+  height: 2.8em;
+  border-radius: 0;
   background-color: var(--cl-tertiary);
 }
 
