--- a/css/contacto.css
+++ b/css/contacto.css
@@ -17,7 +17,7 @@ body{
 }
 
 .form-control {
-  background-color: var(--cl-primary-shadow);
+  background-color: var(--cl-primary-text-shadow);
   width: 100%;
 }
 
