--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 :root {
     --cl-primary: #fff;
     --cl-primary-shadow: rgb(119, 119, 119);
+    --cl-primary-text-shadow: rgb(221, 221, 221);
     --cl-secondary: rgba(24, 24, 24, 0.8);
     --cl-tertiary: rgb(255, 103, 8);
     --cl-background: rgb(238, 238, 238);
@@ -114,7 +115,7 @@ ul li a.active {
 
 .list-group-item:hover {
     background-color: transparent;
-    color: var(--cl-primary-shadow);
+    color: var(--cl-primary-text-shadow);
     border-bottom: 4px solid var(--cl-tertiary);
     padding-bottom: 1em;
 }
@@ -181,6 +182,11 @@ h1.primaryText {
     background-color: #d395d0;
     width: 100%;
     height: 100vh;
+    background-image: url('cofeshop.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 /* menu */
 .thirdSection {
@@ -191,16 +197,30 @@ h1.primaryText {
 
 .header-menu {
     height: 17em;
-    margin-bottom: 1em; 
+    margin-bottom: 3em; 
 
 }
 .header-menu h1{
-    margin-top: 0.4em;
+    padding-top: 5em;
     font-weight: bold;
 }
 .icon-menu {
-    width: 5em;
-    margin-top: 7em;
+    width: 3em;
+    margin-top: 12em;
+    display: none;
+}
+.menu-borders {
+    width: 35%;
+    height: 100px;
+    object-fit: cover;
+    object-position: 0px 20px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    margin-top: 4em;
+    position: absolute;
 }
 .title{
     font-size: 40px;
