--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-
-
 :root {
     --cl-primary: #fff;
     --cl-primary-shadow: rgb(238, 238, 238);
@@ -12,34 +10,37 @@
     --cl-background: rgb(238, 238, 238);
     --ft-logo-font: 'Yanone Kaffeesatz', sans-serif;
     --ft-main: 'Roboto', sans-serif;
-    --ft-poppins:'Poppins', sans-serif;
+    --ft-poppins: 
 }
-
 
 html {
     scroll-behavior: smooth;
-  }
+}
 
 body {
     margin: 0;
     font-family: var(--ft-main);
     position: relative;
 }
+
 .main {
-    background-color: var(--cl-secondary);
+    /*background-color: var(--cl-secondary);*/
     width: 100%;
     height: auto;
 }
+
 .navContainer {
     margin: auto;
     width: 90%;
 }
+
 .navbars {
     width: 100%;
     height: 70px;
     background-color: var(--cl-secondary);
     position: fixed;
     z-index: 1;
+    padding: 0;
 }
 
 span.logo {
@@ -50,7 +51,7 @@ span.logo {
     letter-spacing: 3px;
 }
 
-.and{
+.and {
     color: var(--cl-tertiary);
 }
 
@@ -60,7 +61,6 @@ span.logo {
     letter-spacing: 5px;
     padding: 5px 20px 0px 20px;
     background-color: var(--cl-tertiary);
-
 }
 
 .navbarContent {
@@ -97,6 +97,7 @@ ul li a.active {
     color: var(--cl-primary);
     background-color: transparent;
 }
+
 .list-group-item.active {
     background-color: transparent;
     border: none;
@@ -111,10 +112,8 @@ ul li a.active {
     padding-bottom: 1em;
 }
 
-
-
 .firstSection {
-/*     background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("foto2@2x.png");
+    /*     background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("foto2@2x.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -123,7 +122,7 @@ ul li a.active {
     height: 100vh;
 }
 
-.d-block{
+.d-block {
     width: 100%;
     height: 100vh;
     object-fit: cover;
@@ -132,7 +131,6 @@ ul li a.active {
 
 .logoSal {
     width: 20em;
-
 }
 
 .firstContent {
@@ -157,14 +155,16 @@ h1.primaryText {
 
 .birthday {
     width: 20em;
-    -webkit-filter: invert(100%); /* Safari/Chrome */
+    -webkit-filter: invert(100%);
+    /* Safari/Chrome */
     filter: invert(100%);
     margin-bottom: 2em;
 }
 
 .eventos {
     width: 10em;
-    -webkit-filter: invert(100%); /* Safari/Chrome */
+    -webkit-filter: invert(100%);
+    /* Safari/Chrome */
     filter: invert(100%);
     margin-bottom: 4.5em;
 }
@@ -174,49 +174,57 @@ h1.primaryText {
     width: 100%;
     height: 100vh;
 }
+
+
 /* menu */
+
 .thirdSection {
     background-color: #FCFCFC;
     width: 100%;
     text-align: center;
 }
-.title{
+
+.title {
     font-size: 40px;
     font-family: var(--ft-poppins);
     font-weight: bolder;
     border-bottom: 1px solid #eaeded;
 }
-.container-cards{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-gap: 10px;
-padding-bottom: 5px;
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-bottom: 5px;
 }
 
-.container-cards img{
-width: 100%;
-height: 200px;
-    }
-.container-cards h5{
-        text-align: center;
-        }
+.container-cards img {
+    width: 100%;
+    height: 200px;
+}
 
-.btn-primary{
+.container-cards h5 {
+    text-align: center;
+}
+
+.btn-primary {
     background-color: var(--cl-tertiary);
     font-weight: bold;
     border-color: var(--cl-tertiary);
     transition: .5s ease-out;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     background-color: var(--cl-tertiary);
     border-color: var(--cl-tertiary);
-    box-shadow:  5px 5px 5px rgb(255, 165, 113);
-    
+    box-shadow: 5px 5px 5px rgb(255, 165, 113);
 }
 
+
 /* end menu */
-.fourthSection { 
+
+.fourthSection {
     background-color: #3a2552;
     width: 100%;
     height: 100vh;
@@ -226,14 +234,107 @@ height: 200px;
     color: var(--cl-primary);
     padding: 2em;
     font-weight: bolder;
-
 }
-
 
 .carousel-indicators .active {
     background-color: var(--cl-tertiary);
 }
 
-.carousel-caption {
+.carousel-caption {}
+
+
+
+
+
+
+
+/* --------nosotros---------- */
+
+
+.logo_nh {
+    padding-top: 3rem;
+    padding-left: 3rem;
+}
+
+.text_nav {
+    font-weight: bolder;
+}
+
+
+#equipo {
+    background-color: rgb(238, 238, 238);
     
+}
+
+.img_ppal {
+    padding-top: 3rem;
+}
+
+.text_resena{
+    margin-left: 20px;
+    font-family:  'Poppins', sans-serif;
+    font-weight: bolder;
+    text-align: justify;
+    font-size: 1em;
+    
+}
+
+.pt-5 {
+    font-weight: bold;
+}
+
+
+hr {
+border: 2px solid #646464;
+border-radius: 300px ;
+height: 5px;
+text-align: center;
+}
+
+
+.img-thumbnail__avatar {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border-color: #646464;
+    border-width: 7px;
+    border-style: solid;
+}
+
+
+#footer {
+    background-color: rgb(255, 94, 0);
+}
+
+.navbar-bran {
+    text-decoration: none;
+}
+
+.list{
+    margin-right: 10%;
+    margin-top: 1rem;
+}
+.map {
+    padding-left: 30px;
+    padding-bottom: 50px;
+}
+
+.footer_contenido {
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+    justify-content: space-between
+}
+
+.carousel-item{
+    margin-top: 2rem;
+    padding-left: 4rem;
+    padding-bottom: 5rem;
+}
+
+.text-center{
+    padding-left: 10rem;
+}
+.carousel-imagen {
+    margin-top: 4rem;
+    margin-left: 4rem;
 }
