--- a/css/styles.css
+++ b/css/styles.css
@@ -407,11 +407,64 @@ h1.primaryText {
 }
 
 /* end menu */
+
+/* services */
 .fourthSection { 
-    background-color: #3a2552;
+    background-color: #451C84;
     width: 100%;
-    height: 100vh;
+    text-align: center;
+        
 }
+
+.fourthSection .services { 
+    box-shadow: 0 0px 2px #EB0F00;
+   width: 30%;
+   margin: 20px;
+   color: white;
+   text-align: center;
+}
+.fourthSection .services:hover { 
+    box-shadow: 0 7px 17px #f11206;
+}
+
+.fourthSection .services .titles { 
+    font-size: 25px;
+    letter-spacing: 1px;
+}
+
+.fourthSection .services img { 
+   object-fit: cover;
+   height: 200px;
+   object-position: center;
+}
+.fourthSection .services .card-body { 
+   text-align: justify;
+   margin-left: 10px;
+}
+.fourthSection .services h5 { 
+    color: #E21C61;
+font-size: 18px;
+font-weight: bold;
+ }
+ .fourthSection .services p { 
+color: white;
+font-size: 15px;
+
+ }
+ .fourthSection  a { 
+    background-color: #E21C61;
+    border: none;
+    border: 1px solid  #E21C61;
+    color: white;
+    box-shadow:0px 0px 15px #E21C61;
+    border-radius: 16px;
+}
+.fourthSection  a:hover { 
+    box-shadow:0px 0px 15px #e90f5b;
+   
+}
+
+
 
 .fifthSection {
     width: 100%;
