--- a/css/styles.css
+++ b/css/styles.css
@@ -410,9 +410,14 @@ h1.primaryText {
 
 /* services */
 .fourthSection { 
-    background-color: #451C84;
+    background-color: #F9F9F9;
     width: 100%;
     text-align: center;
+        
+}
+.fourthSection .servi { 
+    color: black;
+
         
 }
 
@@ -420,7 +425,7 @@ h1.primaryText {
     box-shadow: 0 0px 2px #EB0F00;
    width: 30%;
    margin: 20px;
-   color: white;
+   color: black;
    text-align: center;
 }
 .fourthSection .services:hover { 
@@ -442,25 +447,20 @@ h1.primaryText {
    margin-left: 10px;
 }
 .fourthSection .services h5 { 
-    color: #E21C61;
+    color:#FF6708;
 font-size: 18px;
 font-weight: bold;
  }
  .fourthSection .services p { 
-color: white;
+    color: black;
 font-size: 15px;
 
  }
  .fourthSection  a { 
-    background-color: #E21C61;
-    border: none;
-    border: 1px solid  #E21C61;
-    color: white;
-    box-shadow:0px 0px 15px #E21C61;
     border-radius: 16px;
 }
 .fourthSection  a:hover { 
-    box-shadow:0px 0px 15px #e90f5b;
+    box-shadow:0px 0px 15px #FF6708;
    
 }
 
