FALTA mapa del sitio y boton descargar
Falta mapa del sitio y boton descargar

--- a/css/us.css
+++ b/css/us.css
@@ -154,6 +154,10 @@ hr {
     padding-left: 5.2em;
 }
 
+.carousel-control-next {
+    z-index: 1;
+}
+
 #equipo {
     background-color: var(--cl-tertiary);
 }
