--- a/css/styles.css
+++ b/css/styles.css
@@ -407,10 +407,65 @@ h1.primaryText {
 }
 
 /* end menu */
+
+/* services */
 .fourthSection { 
-    background-color: #3a2552;
+    background-color: #F9F9F9;
     width: 100%;
-    height: 100vh;
+    text-align: center;
+        
+}
+.fourthSection .servi { 
+    color: black;
+}
+
+.card-header {
+    background-color: transparent;
+}
+
+.fourthSection .services { 
+   width: 30%;
+   margin: 20px;
+   color: black;
+   padding: 10px;
+   text-align: center;
+}
+.fourthSection .services:hover { 
+    box-shadow: 1px 1px 27px -4px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 27px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 27px -4px rgba(0,0,0,0.75);
+}
+
+.fourthSection .services .titles { 
+    font-size: 25px;
+    letter-spacing: 1px;
+}
+
+.fourthSection .services img { 
+   object-fit: cover;
+   height: 200px;
+   object-position: center;
+}
+.fourthSection .services .card-body { 
+   text-align: justify;
+   margin-left: 10px;
+}
+.fourthSection .services h5 { 
+    color:#FF6708;
+    font-size: 18px;
+    font-weight: bold;
+ }
+ .fourthSection .services p { 
+    color: black;
+font-size: 15px;
+
+ }
+ .fourthSection  a { 
+    background-color: var(--cl-tertiary);
+    color: var(--cl-primary);
+}
+.fourthSection  a:hover { 
+    box-shadow: 0px 0px 15px #FF6708;
 }
 
 .fifthSection {
