--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,12 @@
 footer {
     width: 100%;
     background-color: var(--cl-secondary);
+
   }
 
+  .mapaSitio{
+      height: 100vh;
+  }
   .footer-content {
       margin-top: 3em;
   }
