--- a/css/pedido.css
+++ b/css/pedido.css
@@ -1,10 +1,11 @@
 .container h1 {
-    padding-top: 1.2em;
+    padding-top: 1.8em;
     padding-bottom: 1em;
     color: var(--cl-tertiary);
     font-weight: bolder;
-    font-size: 4em;
+    font-size: 3em;
 }
+
 /* .card{
     color: rgb(27, 27, 27);
 }
@@ -14,11 +15,6 @@
     object-fit: cover;
 
 } */
-.card img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
 .col-4{
     margin: auto;
     text-align: center;
@@ -39,8 +35,9 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
 }
 .paginationContainer{
+    margin-top: 4em;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 4.5em;
 }
 #preeValue{
     margin-right: 10px;
